add marketItemImage sortIndex + patch method
