# docs/swagger.json
@@ -1609,6 +1609,12 @@
                     },
                     {
                         "type": "integer",
+                        "description": "sort index",
+                        "name": "sortIndex",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "integer",
                         "description": "market item id",
                         "name": "marketItemID",
                         "in": "path",
@@ -1620,6 +1626,67 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/github_com_legocy-co_legocy_internal_delivery_http_schemas_marketplace.ImageUploadResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
+        "/market-items/images/{marketItemID}/{imageID}": {
+            "patch": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "market_item_images"
+                ],
+                "summary": "Update Image",
+                "operationId": "update_market_item_image",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "image id",
+                        "name": "imageID",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "market item id",
+                        "name": "marketItemID",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "image update request",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/github_com_legocy-co_legocy_internal_delivery_http_schemas_marketplace.ImageUpdateRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
                         }
                     },
                     "400": {
@@ -3065,6 +3132,17 @@
                 },
                 "isMain": {
                     "type": "boolean"
+                },
+                "sortIndex": {
+                    "type": "integer"
+                }
+            }
+        },
+        "github_com_legocy-co_legocy_internal_delivery_http_schemas_marketplace.ImageUpdateRequest": {
+            "type": "object",
+            "properties": {
+                "sortIndex": {
+                    "type": "integer"
                 }
             }
         },
